--- a/Child_RMDs/TA_Figures.Rmd
+++ b/Child_RMDs/TA_Figures.Rmd
@@ -1,9 +1,6 @@
 ---
 title: "MA_Results"
-author: "Matthew Hamilton"
-date: "13/10/2020"
+author: "Author"
+date: "`r Sys.Date()`"
 output: html_document
 ---
-```{r importance, fig.cap="Variable importance estimated using random forest",echo=F, out.width = "400px"}
-knitr::include_graphics(results_ls$paths_to_figs_ls$importance)
-```
