--- a/Child_RMDs/TA_Body.Rmd
+++ b/Child_RMDs/TA_Body.Rmd
@@ -1,23 +1,18 @@
 ---
 title: "Appendix"
-author: "Matthew Hamilton"
-date: "06/08/2020"
+author: "Author"
+date: "`r Sys.Date()`"
 output: html_document
 ---
 
-## Additional tables
-```{r child="../Child_RMDs/TA_Tables.Rmd", echo=FALSE}
+```{r child="XX_Funs.Rmd", echo=FALSE}
+```
+```{r child="TA_Tables.Rmd", echo=FALSE}
+```
+```{r child="TA_Figures.Rmd", echo=FALSE}
 ```
 
 \newpage
-```{r echo = F}
-if(length(results_ls$ttu_cs_ls$rf_seq_dscdng_chr) > 1){
-  ta_fig_child_chr <- "../Child_RMDs/TA_Figures.Rmd"
-}else{
-  ta_fig_child_chr <- NULL
-}
 
-```
-`r ifelse(is.null(ta_fig_child_chr),"","## Additional figures")`
-```{r child=ta_fig_child_chr, echo=FALSE}
+```{r child="../Child_RMDs/TA_B.Rmd", echo=FALSE}
 ```
